Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pátek, 15. 10. 2021</h5>
+<h5>Sobota, 16. 10. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Polévka z červené čočky</strong>
@@ -50,49 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 15.10.2021</div>
+<div class="nadpis">Sobota 16.10.2021</div>
 <ul>
-<li class="polevka">
-<div class="polozka">300ml Gulášová polévka v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Gulášová polévka v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Segedínský guláš, houskový knedlík, opečená slanina <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Grilované kuřecí prso, teriyaki omáčka, basmati rýže, sezam, koriandr <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Vaječná frittata zapečená s batáty a brokolicí, pohankový salát <em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>200g Rajčatový salát </div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>100g Čokoládové brownie <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">6. </span>100g Višňový koláč s vanilkovým krémem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -103,16 +63,19 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou, nudlemi a játrovou rýží</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Brokolicový krém se zakysanou smetanou</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Křenová omáčka s uzeným masem, kynuté houskové knedlíky</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaná hovězí kýta na houbách, dušená rýže</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Drůbeží játra na tálu s pórkem, pečené brambory s kmínem, mexický dip</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Filírovaná kuřecí prsa, žampiónové soté s anglickou slaninou a kapkou smetany, celerové placky se sýrem, vařené vejce</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Medailonky z kuřecích prsou na jemné hříbkové omáčce s citronovým strouhem, špecle</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Lasagne s boloňským ragú, bešamelem a gratinované sýrem, salát coleslaw</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná kuřecím masem, ledovým salátem salátem s mexickým dresinkem, čerstvou okurkou, paprikou a sýrem, hranolky, tatarka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny promíchaný hořčičným dresinkem, plátkovaná vepřová pečeně, vařené vejce, parmazán</td><td class="menuPrice">133,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnečka se sýrem a chlebovými  krutony</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a šlehačkou, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí soté s čerstvou zeleninou a chilli, dušená jasmínová rýže</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažená vepřová kotleta bez kosti, vařené brambory s máslem a šnitlíkem, citrón</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Plátkované vepřové karé se zelenými fazolovými  lusky, anglickou slaninou, zakysanou smetanou a volským okem</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Medailonky z kuřecích prsou v těstíčku se šunkou a plátky česneku, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Náš dvojitý burger 100g + 100g se šunkou, sýrem, beraním rohem, cibulí, ledovým salátem a mexickým dresinkem, smažené bramborové hranolky tatarka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName"> Steak z kuřecích prsou gratinovaný mozzarellou a rajčaty s bazalkovým pestem, mačkané brambory s pažitkou</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná pečenou plátkovanou vepřovou panenkou, salátovými listy s okurkou a česnekovým dresinkem, smažené bramborové hranolky, mexický dip</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný ančovičkovým dresinkem, kousky kuřecích prsou, restovaná anglická slanina, parmazán, česnekové tousty</td><td class="menuPrice">133,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Jablečný závin se šlehačkou</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -158,6 +121,11 @@ a vanilkovým Crème fraîche	</td>
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"></table>
 </td>
 </tr>
 </table>
