--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -130,7 +130,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Grilovane biftecky z rybich filetu {hejk, makrela, halibut} se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 139</li><li>Peceny filet z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 169</li><li>Jamajske palive dusene hovezi s pecenou dyni, cestvym chilli, rajcaty, zazvorem, novym korenim a zeleninou, jasminova ryze 139</li><li>Rostbif z danci kyty s houbovou omackou s lesnimi houbami, pecene brambory, salatek {L}169</li><li>Ful medames – egyptske boby se zeleninou, bylinkami, sazenym vejcem a zaatarem, arabske placky, salatek {L} 139 </li></ol>
+<ol><li>Peceny filet z atlanticke makrely s pestem ze susenych rajcat, korenena ryze s cockou, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa s pestem ze susenych rajcat,  korenena ryze s cockou, salatek 169</li><li>Burrito s trhanym barbecue hovezim s pecenymi palivymi paprikami, pecene brambory, jogurtovy dip, salatek {L} 139</li><li>Italske houbove rizoto s parmezanem a rostbifem z danciho hrbetu, salatek 169</li><li>Indicke kvetakove kari se zampiony, zazvorem, jogurtem a kokosovym mlekem, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
