--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pondělí, 18. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Polévka z červené čočky</strong>
+<strong>Brokolicová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Mexická Vepřová krkovička s rýží</strong>
+<strong>Záhorácký závitek s vařeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
 						</span>
 </p>
 <p>
-<strong>Nudle s mákem, cukrem a máslem</strong>
+<strong>Zeleninové rizoto s kuřecím masem, sýrem a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							95,-
+							125,-
 						</span>
 </p>
 <p>
