Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -130,7 +130,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s pestem ze susenych rajcat, korenena ryze s cockou, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa s pestem ze susenych rajcat,  korenena ryze s cockou, salatek 169</li><li>Burrito s trhanym barbecue hovezim s pecenymi palivymi paprikami, pecene brambory, jogurtovy dip, salatek {L} 139</li><li>Italske houbove rizoto s parmezanem a rostbifem z danciho hrbetu, salatek 169</li><li>Indicke kvetakove kari se zampiony, zazvorem, jogurtem a kokosovym mlekem, jasminova ryze 139</li></ol>
+<ol><li>Madarske halaszle s kousky rybich filetu, paprikami, bramborovymi haluskami a zakysanou smetanou {L} 139</li><li>Peceny filet z cerstveho candata s citronem a petrzelkovym pestem, stouchane brambory se zelenou cibulkou, salatek 175</li><li>Grilovany veprovy spiz tanduri v jogurtove marinade se zazvorem a garam masala, korenena ryze, merunkove catny, salatek 139</li><li>Pecene bazanti prsicko s nadivkou z choriza, ovciho syra a bylinek, pohanka se smazenou cibulkou, dusena brokolice 169</li><li>Kapustove placicky s petrzelkou a muskatem, stouchane brambory se zelenou cibulkou, tatarska omacka 139 </li></ol>
 </td>
 </tr>
 </table>
