--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Úterý, 19. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Brokolicová</strong>
+<strong>Mexická polévka</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Záhorácký závitek s vařeným bramborem</strong>
+<strong>Krůtí játra po anglicku s pečeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
 						</span>
 </p>
 <p>
-<strong>Zeleninové rizoto s kuřecím masem, sýrem a okurkou</strong>
+<strong>Dušená Vepřová plec na česneku a rozmarýnu s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							127,-
 						</span>
 </p>
 <p>
