--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 19.10.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Polévka z hlívy ústřičné v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Polévka z hlívy ústřičné samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Grilovaná vepřová panenka, pečená polenta, houbová omáčka, rukola <em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Krůtí nudličky v tamarindové omáčce, basmati rýže, koriandr, čerstvá zelenina, arašídy <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>125g Grilovaný sýr halloumi, zeleninové ragú, rukola, balsamiková redukce, opečená bageta <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>250g Celozrnná bageta se sýrem z farmy Javorník <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>200g Okurkový salát</div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>100g Tiramisu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">7. </span>200g Kokosový pudink s pečenou dýní a perníkovým kořením bez lepku a laktózy </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -130,7 +175,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Madarske halaszle s kousky rybich filetu, paprikami, bramborovymi haluskami a zakysanou smetanou {L} 139</li><li>Peceny filet z cerstveho candata s citronem a petrzelkovym pestem, stouchane brambory se zelenou cibulkou, salatek 175</li><li>Grilovany veprovy spiz tanduri v jogurtove marinade se zazvorem a garam masala, korenena ryze, merunkove catny, salatek 139</li><li>Pecene bazanti prsicko s nadivkou z choriza, ovciho syra a bylinek, pohanka se smazenou cibulkou, dusena brokolice 169</li><li>Kapustove placicky s petrzelkou a muskatem, stouchane brambory se zelenou cibulkou, tatarska omacka 139 </li></ol>
+<ol><li>Madarske halaszle s kousky rybich filetu, palivymi paprikami, bramborovymi haluskami a zakysanou smetanou {L} 139</li><li>Peceny filet z cerstveho candata s citronem a petrzelkovym pestem, stouchane brambory se zelenou cibulkou, salatek 175</li><li>Grilovany veprovy kebab tanduri v jogurtove marinade se zazvorem a garam masala, korenena ryze, merunkove catny, salatek 139</li><li>Pecene bazanti prsicko s nadivkou z choriza, ovciho syra a bylinek, pohanka se smazenou cibulkou, dusena brokolice 169</li><li>Kapustove placicky s petrzelkou a muskatem, stouchane brambory se zelenou cibulkou, tatarska omacka 139 </li></ol>
 </td>
 </tr>
 </table>
