Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Středa, 20. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Mexická polévka</strong>
+<strong>Kmínová s vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Krůtí játra po anglicku s pečeným bramborem a tatarkou</strong>
+<strong>Krůtí plátek ,,HAWAI” s kroketami a americkou majonézou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							135,-
 						</span>
 </p>
 <p>
-<strong>Dušená Vepřová plec na česneku a rozmarýnu s rýží</strong>
+<strong>Penne se sýrovou-slaninovou omáčkou a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							125,-
 						</span>
 </p>
 <p>
@@ -130,7 +130,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Madarske halaszle s kousky rybich filetu, palivymi paprikami, bramborovymi haluskami a zakysanou smetanou {L} 139</li><li>Peceny filet z cerstveho candata s citronem a petrzelkovym pestem, stouchane brambory se zelenou cibulkou, salatek 175</li><li>Grilovany veprovy kebab tanduri v jogurtove marinade se zazvorem a garam masala, korenena ryze, merunkove catny, salatek 139</li><li>Pecene bazanti prsicko s nadivkou z choriza, ovciho syra a bylinek, pohanka se smazenou cibulkou, dusena brokolice 169</li><li>Kapustove placicky s petrzelkou a muskatem, stouchane brambory se zelenou cibulkou, tatarska omacka 139 </li></ol>
+<ol><li>Peceny atlanticky hejk s omackou tahini, stredomorsky fusilli salat s paprikami, rajcaty, olivami a zelenymi bylinkami 139</li><li>Peceny filet z cerstve tresky a jesetera s omackou tahini, stredomorsky fusilli salat s paprikami, rajcaty, olivami a zelenymi bylinkami 169</li><li>Boeuf Stroganoff – hovezi nudlicky se zampiony, znojemskymi okurkami, salotkami a zakysanou smetanou, jasminova ryze, salatek 139</li><li>Spanelske callos – hovezi drstky s chorizem, palivymi paprikami, cizrnou a rajcaty, ciabatta {L} 165</li><li>Pecena dyne hokkaido a brokolice zapecena s goudou a bylinkami, bulgur se smazenou cibulkou, jogurtovy dip 139 </li></ol>
 </td>
 </tr>
 </table>
