--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 20.10.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Minestrone sypaná parmazánem a bazalkou v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Minestrone sypaná parmazánem a bazalkou samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>140g Hovězí loupaná plec, rajská omáčka, variace domácích knedlíků, perníkový chips <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>140g Kuřecí steak s olivovou tapenádou a rajčaty, smetanové brambory s restovaným pórkem <em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Špenátové lasagne s dýní a sýrem, smetanová omáčka, rukola <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>250g Bavorská bageta dle denní nabídky</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>200g Kokosový pudink s pečenou dýní a perníkovým kořením bez lepku a laktózy </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>100g Vanilkový větrník <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">7. </span>100g Tiramisu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">8. </span>100g Makový koláč s tvarohem a višněmi bez lepku <em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -130,7 +180,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk s omackou tahini, stredomorsky fusilli salat s paprikami, rajcaty, olivami a zelenymi bylinkami 139</li><li>Peceny filet z cerstve tresky a jesetera s omackou tahini, stredomorsky fusilli salat s paprikami, rajcaty, olivami a zelenymi bylinkami 169</li><li>Boeuf Stroganoff – hovezi nudlicky se zampiony, znojemskymi okurkami, salotkami a zakysanou smetanou, jasminova ryze, salatek 139</li><li>Spanelske callos – hovezi drstky s chorizem, palivymi paprikami, cizrnou a rajcaty, ciabatta {L} 165</li><li>Pecena dyne hokkaido a brokolice zapecena s goudou a bylinkami, bulgur se smazenou cibulkou, jogurtovy dip 139 </li></ol>
+<ol><li>Peceny atlanticky hejk s omackou tahini, stredomorsky fusilli salat s paprikami, rajcaty, olivami a zelenymi bylinkami ( L ) 139</li><li>Peceny filet z cerstve tresky a jesetera s omackou tahini, stredomorsky fusilli salat s paprikami, rajcaty, olivami a zelenymi bylinkami  ( L )169</li><li>Boeuf Stroganoff – hovezi nudlicky se zampiony, znojemskymi okurkami, salotkami a zakysanou smetanou, jasminova ryze, salatek 139</li><li>Spanelske callos – hovezi drstky s chorizem, palivymi paprikami, cizrnou a rajcaty, ciabatta {L} 165</li><li>Pecena dyne hokkaido a brokolice zapecena s goudou a bylinkami, bulgur se smazenou cibulkou, jogurtovy dip 139 </li></ol>
 </td>
 </tr>
 </table>
