Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -21,7 +21,7 @@
 						</span>
 </p>
 <p>
-<strong>Penne se sýrovou-slaninovou omáčkou a parmazánem</strong>
+<strong>Penne se sýrovou-slaninovou omáčkou, grilovaným liliem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							125,-
