Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Středa, 20. 10. 2021</h5>
+<h5>Čtvrtek, 21. 10. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Kmínová s vejcem</strong>
@@ -50,59 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 20.10.2021</div>
+<div class="nadpis">Čtvrtek 21.10.2021</div>
 <ul>
-<li class="polevka">
-<div class="polozka">300ml Minestrone sypaná parmazánem a bazalkou v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Minestrone sypaná parmazánem a bazalkou samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>140g Hovězí loupaná plec, rajská omáčka, variace domácích knedlíků, perníkový chips <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>140g Kuřecí steak s olivovou tapenádou a rajčaty, smetanové brambory s restovaným pórkem <em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Špenátové lasagne s dýní a sýrem, smetanová omáčka, rukola <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>250g Bavorská bageta dle denní nabídky</div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>200g Kokosový pudink s pečenou dýní a perníkovým kořením bez lepku a laktózy </div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">6. </span>100g Vanilkový větrník <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">7. </span>100g Tiramisu <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">8. </span>100g Makový koláč s tvarohem a višněmi bez lepku <em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -113,10 +63,10 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborový krém s bramborovým chipsem</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou, nudlemi a játrovou rýží</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pórkový krém s vařeným vejcem a krutony juliene</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Steak z kuřecích prsou s broskví a ananasem gratinované sýrem, vařené brambory s máslem a petrželkou</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka s hovězím masem, dušená rýže</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená masová mini sekaná se sýrem, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s volským okem, smažené bramborové plátky, mexický dip</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Roláda z vepřové pečeně plněná kapii, vařeným vejcem a sýrem, hráškové pyré, zeleninový salát </td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">170g</td><td class="menuName">Smažená vepřová kapsa plněná šunkou a sýrem, bramborová kaše s máslem, citrón</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše ravioly plněné králičím masem s kořenovou zeleninou v tomatové omáčce s kapkou smetany a bazalkovým pestem, strouhaný parmazán</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Buritto z mletého masa s kukuřicí a fazolkami v pšeničné tortille, smažené hranolky, zakysaná smetana</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny promíchaný olivovým olejem, medailonky z vepřové pečeně, opečená anglická slanina</td><td class="menuPrice">135,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP.</td><td class="menuName">Těstoviny linguine s bolonským ragú, strouhaný sýr</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Šenkýrenský vepřový guláš s červenou cibulí a beraním rohem, špekové knedlíky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřová plec po srbsku, dušená jasmínová rýže</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na roštu, pečené brambory s kmínem, tatarka</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené masové čevabčiči, vařené brambory, tatarka, cibule, hořčice</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Pečená vepřová panenka dorůžova, smetanová omáčka s uzeným masem, zelené fazolové lusky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené rizoletky plněné mletým masem s listovým špenátem, mačkané brambory s glazurovanou cibulkou, chilli majanéza</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z kuřecích prsou marinovaný v jogurtu s bylinkami, vařené brambory s máslem a šnitlíkem, zeleninový salát promíchaný mexickým dresinkem</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný sýrovým dresinkem, řezy vepřové panenky, vařené vejce</td><td class="menuPrice">135,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
@@ -168,6 +118,11 @@ a vanilkovým Crème fraîche	</td>
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Hovězí vývar se zeleninou a játrovými knedlíčky 1a,3,7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažená treska tmavá v citronové strouhance s bramborovou kaší a šopským salátem 1a,3,4,7,12</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">180g</td><td class="title">Sekaný hovězí biftek se sázeným vejcem s hranolky, chipotle majonézou a trhaným salátem 1a,3,7,10</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">3ks</td><td class="title">Marinované kuřecí paličky v jogurtu a koření Tandory Masala na zeleninovém kuskusu s citrusovo mátovým zákysem 1a,7,9</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
