--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Čtvrtek, 21. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Kmínová s vejcem</strong>
+<strong>Houbová smetanová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Krůtí plátek ,,HAWAI” s kroketami a americkou majonézou</strong>
+<strong>Uzená krkovička se špenátem a bramborovým knedlíkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							129,-
 						</span>
 </p>
 <p>
-<strong>Penne se sýrovou-slaninovou omáčkou, grilovaným liliem a parmazánem</strong>
+<strong>Grilovaný kozí sýr na salátku s pečenou paprikou a bagetkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							129,-
 						</span>
 </p>
 <p>
@@ -130,7 +130,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk s omackou tahini, stredomorsky fusilli salat s paprikami, rajcaty, olivami a zelenymi bylinkami ( L ) 139</li><li>Peceny filet z cerstve tresky a jesetera s omackou tahini, stredomorsky fusilli salat s paprikami, rajcaty, olivami a zelenymi bylinkami  ( L )169</li><li>Boeuf Stroganoff – hovezi nudlicky se zampiony, znojemskymi okurkami, salotkami a zakysanou smetanou, jasminova ryze, salatek 139</li><li>Spanelske callos – hovezi drstky s chorizem, palivymi paprikami, cizrnou a rajcaty, ciabatta {L} 165</li><li>Pecena dyne hokkaido a brokolice zapecena s goudou a bylinkami, bulgur se smazenou cibulkou, jogurtovy dip 139 </li></ol>
+<ol><li> Peceny filet z lofotske makrely s krenovou jogurtovou omackou, pecene baby brambory, salatek z cervene repy 139</li><li>Peceny filet z cerstveho chnapala malabarskeho s krenovou jogurtovou omackou, pecene baby brambory, salatek z cervene repy 175</li><li>Japonsky ramen s pecenym veprovym ve sladke chilli marinade, gaj coj, psenicnymi nudlemi a sazenym vajickem v silnem hovezim vyvaru se zelenymi bylinkami 139</li><li>Peceny rolovany danci bok s nadivkou s kachnimi jatry, chlupate knedliky, ruzove zeli s jablky {L} 165</li><li>Pecene papriky plnene cizrnovym kari s pecenou dyni a zeleninou, salatek 139</li></ol>
 </td>
 </tr>
 </table>
